--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,9 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display:flex;
+  justify-content: space-between;
+  padding: 20px;
 }
 
 .logo {
@@ -13,7 +16,11 @@
 
 ul {
   /* this removes the dots on the list items*/
+  display: flex;
   list-style-type: none;
+  align-items: center;
+  padding: 10px 8px;
+  gap: 8px;
 }
 
 a {
@@ -22,4 +29,5 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+
 }
