--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,7 +1,19 @@
 body {
   font-family: 'Courier New', Courier, monospace;
 }
+.body{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  padding-bottom: 32px;
+  text-align: center;
 
+}
+.item{
+  padding: 52px;
+  width:200px;
+}
 img {
   width: 100px;
   height: 100px;
@@ -10,6 +22,10 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+}
+body .title{
+  display: flex;
+  justify-content: center;
 }
 
 /* do not edit this footer */
